--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <!-- Add favicon from personal website -->
-    <!-- <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain="> -->
+    <title>Infinity-scroll</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Title -->
+    <h1>Unsplash API - Infinity Scroll</h1>
+    <!-- Loader -->
+    <div class="loader" id="loader">
+        <img src="loader.svg" alt="Loading">
+    </div>
+    <!-- Image Container -->
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
